# esp32

ESP32_Farmland_monitoring/: README.md  device.md  sdkconfig
ESP32_Farmland_monitoring/components/: CMakeLists.txt
ESP32_Farmland_monitoring/components/CAMERA/: camera.c  camera.h
ESP32_Farmland_monitoring/components/ML/: ml_classifier.cpp  ml_classifier.h
ESP32_Farmland_monitoring/components/SENSOR/: env_sensor.h  sensor.c
ESP32_Farmland_monitoring/components/SPI/: spi.c
ESP32_Farmland_monitoring/main/: idf_component.yml  main.c
ESP32_Farmland_monitoring/models/plant_binary/: README.md  labels.txt  metadata.json  plant_binary_float.tflite  plant_binary_int8.tflite  plant_binary_model.keras
ESP32_Farmland_monitoring/tools/ml/: README.md  export_tflite_to_c.py  inspect_tflite.py  prepare_binary_dataset.py  prepare_svm_distribution.py  requirements.txt  train_binary_model.py
ESP32_Stranger Recognition/: README.md
ESP32_Stranger Recognition/components/: CMakeLists.txt
ESP32_Stranger Recognition/components/CAMERA/: camera.c  camera.h
ESP32_Stranger Recognition/components/LCD/: lcd.h
ESP32_Stranger Recognition/main/: CMakeLists.txt  idf_component.yml  main.cpp
ESP32_Stranger Recognition_Online/: CMakeLists.txt  FACE_RECOGNITION_VALIDATION.md  README.md  partitions.csv  sdkconfig.defaults
ESP32_Stranger Recognition_Online/components/: CMakeLists.txt
ESP32_Stranger Recognition_Online/components/CAMERA/: camera.c  camera.h
ESP32_Stranger Recognition_Online/main/: CMakeLists.txt  main.cpp  stream_config.h.example
ESP32_Stranger Recognition_Online/server/: README.md  server.js  server.py
tomato_clock/: CMakeLists.txt  readme.md
tomato_clock/components/: CMakeLists.txt
tomato_clock/components/GPTIM/: gptim.c  gptim.h
tomato_clock/components/LED/: led.c  led.h
tomato_clock/main/: main.c
